feat: Compile to Java 8 to support all Minecraft versions