@@ -6,7 +6,7 @@ import net.fabricmc.api.ClientModInitializer;
 import net.fabricmc.loader.api.FabricLoader;
 import net.minecraft.client.Minecraft;
 
-import java.util.List;
+import java.util.Collections;
 import java.util.concurrent.CompletableFuture;
 
 public class CosmeticadotjavaPatcher implements ClientModInitializer {
@@ -15,7 +15,7 @@ public class CosmeticadotjavaPatcher implements ClientModInitializer {
 		// e.g. print lores (for testing)
 		// also print the message to check it changed
 		if (FabricLoader.getInstance().isDevelopmentEnvironment()) {
-			CompletableFuture.supplyAsync(() -> CosmeticaAPI.newUnauthenticatedInstance().getLoreList(LoreType.TITLES).or(List.of()))
+			CompletableFuture.supplyAsync(() -> CosmeticaAPI.newUnauthenticatedInstance().getLoreList(LoreType.TITLES).or(Collections.emptyList()))
 					.thenAcceptAsync(System.out::println, Minecraft.getInstance())
 					.thenApply(v -> CosmeticaAPI.getMessage())
 					.thenAccept(System.out::println);
